# tiramisu-dataset-grpc-server

./: .gitignore  README.md  config.yaml  config.yaml.template  pyproject.toml
dataset_grpc_server/: config.py  data_service.py  server.py  tiramisu_function_server.py
dataset_grpc_server/grpc_files/: tiramisu_function_pb2.py  tiramisu_function_pb2.pyi  tiramisu_function_pb2_grpc.py
dataset_grpc_server/protos/: tiramisu_function.proto
examples/: client.py  tiramisu_function_client.py
tests/: test_get_function.py  test_save_dataset.py
